--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mazin Sayed</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=JetBrains+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=JetBrains+Mono:wght@300;400;600&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- Animated Background -->
     <div class="neural-network" id="neuralNetwork"></div>
-    
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -41,7 +45,7 @@
                 </div>
                 <h2 class="hero-subtitle">Building Intelligent Solutions</h2>
                 <p class="hero-description">
-                    Computer Science Student specializing in Artificial Intelligence, Machine Learning, 
+                    Computer Science Student specializing in Artificial Intelligence, Machine Learning,
                     and Full-Stack Web Development. Transforming ideas into innovative digital experiences.
                 </p>
                 <div class="hero-buttons">
@@ -77,8 +81,8 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-intro">
-                        I'm a passionate Computer Science student with a deep fascination for Artificial Intelligence 
-                        and its transformative potential. My journey in tech spans from building neural networks 
+                        I'm a passionate Computer Science student with a deep fascination for Artificial Intelligence
+                        and its transformative potential. My journey in tech spans from building neural networks
                         to crafting elegant web applications.
                     </p>
                     <div class="about-stats">
@@ -100,9 +104,10 @@
                     <div class="image-frame">
                         <div class="image-placeholder">
                             <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="100" cy="100" r="80" fill="var(--accent-color)" opacity="0.2"/>
-                                <circle cx="100" cy="80" r="30" fill="var(--accent-color)" opacity="0.6"/>
-                                <path d="M 50 120 Q 100 150 150 120" stroke="var(--accent-color)" stroke-width="3" fill="none" opacity="0.6"/>
+                                <circle cx="100" cy="100" r="80" fill="var(--accent-color)" opacity="0.2" />
+                                <circle cx="100" cy="80" r="30" fill="var(--accent-color)" opacity="0.6" />
+                                <path d="M 50 120 Q 100 150 150 120" stroke="var(--accent-color)" stroke-width="3"
+                                    fill="none" opacity="0.6" />
                             </svg>
                         </div>
                     </div>
@@ -121,8 +126,8 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-intro">
-                        I'm a passionate Computer Science student with a deep fascination for Artificial Intelligence 
-                        and its transformative potential. My journey in tech spans from building neural networks 
+                        I'm a passionate Computer Science student with a deep fascination for Artificial Intelligence
+                        and its transformative potential. My journey in tech spans from building neural networks
                         to crafting elegant web applications.
                     </p>
                     <div class="about-stats">
@@ -144,9 +149,10 @@
                     <div class="image-frame">
                         <div class="image-placeholder">
                             <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="100" cy="100" r="80" fill="var(--accent-color)" opacity="0.2"/>
-                                <circle cx="100" cy="80" r="30" fill="var(--accent-color)" opacity="0.6"/>
-                                <path d="M 50 120 Q 100 150 150 120" stroke="var(--accent-color)" stroke-width="3" fill="none" opacity="0.6"/>
+                                <circle cx="100" cy="100" r="80" fill="var(--accent-color)" opacity="0.2" />
+                                <circle cx="100" cy="80" r="30" fill="var(--accent-color)" opacity="0.6" />
+                                <path d="M 50 120 Q 100 150 150 120" stroke="var(--accent-color)" stroke-width="3"
+                                    fill="none" opacity="0.6" />
                             </svg>
                         </div>
                     </div>
@@ -162,7 +168,7 @@
                 <span class="section-number">02</span>
                 <h2 class="section-title">My Skills</h2>
             </div>
-            
+
             <h3 class="skills-subtitle">What I'm Good At</h3>
             <div class="simple-skills-grid">
                 <div class="simple-skill-box">
@@ -212,7 +218,7 @@
                     <div class="project-emoji">🐍</div>
                     <h3 class="simple-project-title">Python Automation Tool</h3>
                     <p class="simple-project-desc">
-                        A Python script that automates daily tasks and saves time. 
+                        A Python script that automates daily tasks and saves time.
                         Built with Python to handle file organization and data processing.
                     </p>
                     <div class="project-tech-simple">
@@ -228,7 +234,7 @@
                     <div class="project-emoji">🌐</div>
                     <h3 class="simple-project-title">Personal Website</h3>
                     <p class="simple-project-desc">
-                        A clean and responsive website built from scratch using HTML and CSS. 
+                        A clean and responsive website built from scratch using HTML and CSS.
                         Features modern design and smooth animations.
                     </p>
                     <div class="project-tech-simple">
@@ -252,29 +258,36 @@
                 <div class="contact-info">
                     <h3 class="contact-heading">Get in Touch</h3>
                     <p class="contact-text">
-                        I'm always excited to collaborate on innovative projects or discuss new opportunities. 
+                        I'm always excited to collaborate on innovative projects or discuss new opportunities.
                         Whether you have a question or just want to say hi, feel free to reach out!
                     </p>
                     <div class="contact-details">
                         <div class="contact-item">
-                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <span>mazinsayed</span>
+                            <span>mazinsayed777@gmail.com</span>
                         </div>
                         <div class="contact-item">
-                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
+                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
                             </svg>
-                            <span>github.com/aidev</span>
+                            <span>https://github.com/Mazinw1</span>
                         </div>
                         <div class="contact-item">
-                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"/>
-                                <circle cx="4" cy="4" r="2"/>
+                            <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z" />
+                                <circle cx="4" cy="4" r="2" />
                             </svg>
-                            <span>linkedin.com/in/aidev</span>
+                            <span>Soon</span>
                         </div>
+                        <span>contact maintenance , email me</span>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
@@ -320,4 +333,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
