--- a/index.html
+++ b/index.html
@@ -332,6 +332,25 @@
     </footer>
 
     <script src="script.js"></script>
+      <!-- باقي الموقع -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+
+    <form id="contactForm">
+      <input id="name" type="text" placeholder="Your Name" required />
+      <input id="email" type="email" placeholder="Your Email" required />
+      <textarea id="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+
+  </section>
+
+  <!-- Supabase library -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- Your JS file -->
+  <script src="script.js"></script>
+  
 </body>
 
 </html>
